# 3d-data-viewer

./: .gitignore  Cargo.toml  README.md  build.sh  example-img.tiff  package.json
.devcontainer/: devcontainer.json
src/: amplitude_texture.rs  image.rs  index_buffer.rs  keyboard.rs  main.rs  mouse.rs  overlay.rs  pixel_picker.rs  pixel_value_reader.rs  projection.rs  shader.wgsl  texture.rs  transformation.rs  vertex_buffer.rs
src/texture/: amplitude.rs  mod.rs  overlay.rs  surface.rs
wasm-demo/: index.html  package.json  serve.js
wasm-demo/src/: demo.js
wasm-demo/src/assets/data/: amplitude.tiff  surface.tiff
