[package]
name = "data-viewer-3d"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-channel = "2.5.0"
futures = "0.3"
bytemuck = "1.24.0"
env_logger = "0.11.8"
glam = "0.30.8"
log = "0.4.28"
num-traits = "0.2.19"
pollster = "0.4.0"
reqwest = "0.12.26"
tiff = "0.10.3"
wgpu = "26.0.1"
winit = "0.30.12"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "26.0.1"}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
